force-app/main/default/objects/KimbleOne__CustomerDeliveryGroup__c/KimbleOne__CustomerDeliveryGroup__c.object-meta.xml
<CustomObject>
    <label>Customer Delivery Group</label>
    <nameField>
        <label>CustomerDeliveryGroup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Engagements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>