force-app/main/default/objects/KimbleOne__CustomerDeliveryGroup__c/fields/KimbleOne__DeliveryGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Group</label>
    <referenceTo>KimbleOne__DeliveryGroup__c</referenceTo>
    <relationshipLabel>Customer Delivery Groups</relationshipLabel>
    <relationshipName>CustomerDeliveryGroups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>