force-app/main/default/objects/KimbleOne__CustomerDeliveryGroup__c/fields/KimbleOne__FinancialsSharedWithCustomer__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FinancialsSharedWithCustomer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Financial Summary Shared</label>
    <type>Checkbox</type>
</CustomField>