force-app/main/default/objects/KimbleOne__CustomerDeliveryGroup__c/fields/KimbleOne__SharedWithCustomer__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SharedWithCustomer__c</fullName>
    <formula>KimbleOne__DeliveryGroup__r.KimbleOne__SharedWithCustomer__c</formula>
    <label>Shared With Customer</label>
    <type>Checkbox</type>
</CustomField>