force-app/main/default/objects/KimbleOne__CustomerDeliveryGroup__c/fields/KimbleOne__TimesheetsSharedWithCustomer__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimesheetsSharedWithCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timesheets Shared</label>
    <type>Checkbox</type>
</CustomField>