force-app/main/default/objects/KimbleOne__CustomerDeliveryGroup__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>